--- a/index.html
+++ b/index.html
@@ -1,1 +1,220 @@
-<h1>Hello World!</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1"
+  />
+  <title>Sensor Dashboard — CRIS Sky Lab</title>
+
+  <!-- Bootstrap 5 -->
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+    crossorigin="anonymous"
+  />
+
+  <style>
+    body {
+      background-color: #f7f7f9;
+    }
+    header {
+      background: #0d6efd;
+      color: #fff;
+    }
+    .brand {
+      font-weight: 700;
+      letter-spacing: .3px;
+    }
+    .status-badge {
+      font-size: .85rem;
+    }
+    footer {
+      color: #6c757d;
+    }
+    /* Make canvas crisp on high-DPI screens */
+    canvas { image-rendering: -webkit-optimize-contrast; }
+  </style>
+</head>
+<body>
+  <!-- Header -->
+  <header class="py-3">
+    <div class="container d-flex flex-wrap justify-content-between align-items-center">
+      <div class="brand h4 m-0">CRIS Sky Lab — Sensor Dashboard</div>
+      <div>
+        <span id="connStatus" class="badge bg-secondary status-badge">Connecting…</span>
+      </div>
+    </div>
+  </header>
+
+  <!-- Chart area -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+  <main class="container my-5">
+    <h3 class="mb-2">Room Temperature (last 10 readings)</h3>
+
+    <div class="d-flex flex-wrap gap-3 align-items-center">
+      <div class="fs-5">
+        <strong>Now:</strong> <span id="curTemp">--</span> °C
+      </div>
+      <div class="text-muted">
+        <small>Updated: <span id="curTime">--</span></small>
+      </div>
+    </div>
+
+    <div class="ratio ratio-16x9 mt-3 bg-white rounded shadow-sm p-3">
+      <canvas id="tempChart" aria-label="Temperature over time" role="img"></canvas>
+    </div>
+
+    <div id="errorBox" class="alert alert-warning mt-3 d-none" role="alert">
+      Having trouble fetching data. Retrying automatically…
+    </div>
+  </main>
+
+  <footer class="container my-5 text-center">
+    <small>
+      Data source: GitHub Gist • Updates ~every 10s • Built with Chart.js &amp; Bootstrap
+    </small>
+  </footer>
+
+  <script>
+    // ======= Config you provided =======
+    const USER = "LukeGrif";
+    const GIST_ID = "188dc885b3eddb2941c08042185fbe61";
+
+    const RAW_LATEST = `https://gist.githubusercontent.com/${USER}/${GIST_ID}/raw/latest.json`;
+    const RAW_HISTORY = `https://gist.githubusercontent.com/${USER}/${GIST_ID}/raw/history.json`;
+
+    // ======= UI handles =======
+    const $curTemp = document.getElementById('curTemp');
+    const $curTime = document.getElementById('curTime');
+    const $connStatus = document.getElementById('connStatus');
+    const $errorBox = document.getElementById('errorBox');
+
+    // ======= Chart setup =======
+    const labels = [];
+    const temps = [];
+    const ctx = document.getElementById('tempChart').getContext('2d');
+
+    const chart = new Chart(ctx, {
+      type: 'line',
+      data: {
+        labels,
+        datasets: [{
+          label: 'Temperature (°C)',
+          data: temps,
+          borderWidth: 2,
+          tension: 0.3,
+          fill: false,
+          pointRadius: 3
+        }]
+      },
+      options: {
+        responsive: true,
+        maintainAspectRatio: false,
+        animation: false,
+        interaction: { mode: 'index', intersect: false },
+        plugins: {
+          legend: { display: true },
+          tooltip: {
+            callbacks: {
+              // Tooltip shows ISO date-time as well
+              afterLabel: (ctx) => ` at ${ctx.label}`
+            }
+          }
+        },
+        scales: {
+          y: { beginAtZero: false, title: { display: true, text: '°C' } },
+          x: { title: { display: true, text: 'Time' } }
+        }
+      }
+    });
+
+    // ======= Utilities =======
+    async function fetchJSON(url) {
+      const sep = url.includes('?') ? '&' : '?';
+      const res = await fetch(url + sep + 't=' + Date.now(), { cache: 'no-store' });
+      if (!res.ok) throw new Error(`HTTP ${res.status}`);
+      return res.json();
+    }
+
+    function fmtTime(tsISO) {
+      // Show local time as hh:mm:ss, but use full locale for the "Updated" label
+      const d = new Date(tsISO);
+      return d.toLocaleTimeString();
+    }
+
+    function fmtDateTime(tsISO) {
+      return new Date(tsISO).toLocaleString();
+    }
+
+    function setStatus(ok) {
+      if (ok) {
+        $connStatus.className = "badge bg-success status-badge";
+        $connStatus.textContent = "Live";
+        $errorBox.classList.add('d-none');
+      } else {
+        $connStatus.className = "badge bg-warning text-dark status-badge";
+        $connStatus.textContent = "Reconnecting…";
+        $errorBox.classList.remove('d-none');
+      }
+    }
+
+    function pushPoint(tsISO, tC) {
+      const label = fmtTime(tsISO);
+      labels.push(label);
+      temps.push(Number(tC));
+      if (labels.length > 10) { labels.shift(); temps.shift(); }
+      chart.update();
+      $curTemp.textContent = Number(tC).toFixed(1);
+      $curTime.textContent = fmtDateTime(tsISO);
+    }
+
+    // ======= Data loading =======
+    async function loadHistory() {
+      try {
+        const hist = await fetchJSON(RAW_HISTORY);
+        // Expect newest last; if not, sort by timestamp
+        hist.sort((a, b) => new Date(a.timestamp) - new Date(b.timestamp));
+        const last10 = hist.slice(-10);
+        last10.forEach(p => pushPoint(p.timestamp, p.temperature));
+        setStatus(true);
+      } catch (e) {
+        console.warn("No history yet, will start from latest.", e);
+        setStatus(false);
+      }
+    }
+
+    let lastTs = null;
+    async function pollLatest() {
+      try {
+        const { temperature, timestamp } = await fetchJSON(RAW_LATEST);
+        if (!lastTs || timestamp !== lastTs) {
+          lastTs = timestamp;
+          pushPoint(timestamp, temperature);
+        }
+        setStatus(true);
+      } catch (e) {
+        console.error("Latest fetch error:", e);
+        setStatus(false);
+      }
+    }
+
+    // ======= Boot =======
+    (async () => {
+      await loadHistory();
+      await pollLatest();             // ensures at least one point
+      setInterval(pollLatest, 10000); // poll every ~10s
+    })();
+  </script>
+
+  <!-- Bootstrap JS (optional for components) -->
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"
+  ></script>
+</body>
+</html>
