--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
     <!-- Main -->
     <main class="container my-5">
-        <h3 class="mb-2">Room Temperature (last 10 readings)</h3>
+        <h3 class="mb-2">Temperature (last 10 readings)</h3>
 
         <div class="d-flex flex-wrap gap-3 align-items-center">
             <div class="fs-5">
