--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 
         // ===== Leaflet Map (one pin for UL) =====
         // Coordinates for University of Limerick (approx campus center)
-        const UL_COORDS = [52.67348, -8.56410];
+        const UL_COORDS = [52.67379030817894, -8.571973008720438];
 
         const map = L.map("ul-map", { worldCopyJump: true });
         // Set initial view around UL (zoom ~15 gives campus-level view)
