--- a/index.html
+++ b/index.html
@@ -9,20 +9,12 @@
     <title>Sensor Dashboard</title>
 
     <!-- Bootstrap 5 (CSS only) -->
-    <link
-        href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-        rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-        crossorigin="anonymous"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
 
     <!-- Leaflet CSS (map library) -->
-    <link
-        rel="stylesheet"
-        href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-        integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
-        crossorigin=""
-    />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+        integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
 
     <!-- Custom styles -->
     <link rel="stylesheet" href="css/styles.css">
@@ -63,7 +55,7 @@
         <!-- Map Card -->
         <section class="map-card mt-4">
             <div class="map-header mb-2">
-                <h3>📍 Simulated Live Location</h3>
+                <h3>📍 Live Location</h3>
                 <p class="text-muted mb-0">Castletroy, Limerick, Ireland</p>
             </div>
             <div class="map-wrapper">
@@ -73,22 +65,24 @@
     </main>
 
     <!-- Footer -->
+    <!-- Footer -->
     <footer class="container my-5 text-center">
         <small>
-            Data source: GitHub Gist • Updates ~every 120s • Author Luke Griffin
+            Data source: GitHub Gist • Updates ~every 120s • Author
+            <a href="https://github.com/LukeGrif" target="_blank" rel="noopener noreferrer">
+                Luke Griffin
+            </a>
         </small>
     </footer>
+
 
     <!-- Libraries -->
     <!-- Chart.js -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
     <!-- Leaflet JS -->
-    <script
-        src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-        integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
-        crossorigin=""
-    ></script>
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+        integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
 
     <!-- App logic -->
     <script src="jss/dashboard.js"></script>
